[gd_scene load_steps=8 format=3 uid="uid://y3yyjeawkn84"]

[ext_resource type="Shader" path="res://Scripts/pause_menu_blur.gdshader" id="1_fkxb1"]
[ext_resource type="Script" path="res://Scripts/game_over.gd" id="2_q6by1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_grgeu"]
shader = ExtResource("1_fkxb1")
shader_parameter/blur = null
shader_parameter/brightness = 1.0

[sub_resource type="Animation" id="Animation_c4p4x"]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [null, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.0, 0.9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CCont:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vj5cm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CCont:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_hpn8r"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CCont:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q8ivi"]
_data = {
"Pause": SubResource("Animation_c4p4x"),
"RESET": SubResource("Animation_vj5cm"),
"Unpause": SubResource("Animation_hpn8r")
}

[node name="GameOver" type="ColorRect"]
process_mode = 3
material = SubResource("ShaderMaterial_grgeu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_q6by1")

[node name="CCont" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PCont" type="PanelContainer" parent="CCont"]
custom_minimum_size = Vector2(256, 100)
layout_mode = 2

[node name="MCont" type="MarginContainer" parent="CCont/PCont"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxTop" type="VBoxContainer" parent="CCont/PCont/MCont"]
layout_mode = 2

[node name="Label" type="Label" parent="CCont/PCont/MCont/VBoxTop"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER"

[node name="HSep1" type="HSeparator" parent="CCont/PCont/MCont/VBoxTop"]
layout_mode = 2

[node name="CurrentHighScoreVBox" type="VBoxContainer" parent="CCont/PCont/MCont/VBoxTop"]
layout_mode = 2

[node name="HighScoreLabel" type="Label" parent="CCont/PCont/MCont/VBoxTop/CurrentHighScoreVBox"]
layout_mode = 2
text = "Highest Score:"

[node name="HBoxContainer" type="HBoxContainer" parent="CCont/PCont/MCont/VBoxTop/CurrentHighScoreVBox"]
layout_mode = 2

[node name="HighScoreName" type="Label" parent="CCont/PCont/MCont/VBoxTop/CurrentHighScoreVBox/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="HighScoreScore" type="Label" parent="CCont/PCont/MCont/VBoxTop/CurrentHighScoreVBox/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HSep2" type="HSeparator" parent="CCont/PCont/MCont/VBoxTop"]
layout_mode = 2

[node name="NewGameBox" type="HBoxContainer" parent="CCont/PCont/MCont/VBoxTop"]
layout_mode = 2

[node name="NameField" type="TextEdit" parent="CCont/PCont/MCont/VBoxTop/NewGameBox"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "Name:"

[node name="NewGameButton" type="Button" parent="CCont/PCont/MCont/VBoxTop/NewGameBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "NEW GAME"

[node name="HBoxContainer" type="HBoxContainer" parent="CCont/PCont/MCont/VBoxTop"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="CCont/PCont/MCont/VBoxTop/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="CCont/PCont/MCont/VBoxTop/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "QUIT"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q8ivi")
}
